# pytest-demo

./: pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_example.py
