[project]
name = "pytest-demo"
version = "0.1.0"
dependencies = [
    "urllib3==1.25.2",  # Known vulnerable version
    "cryptography==3.2.1",
    "requests==2.20.0", 
    "Django==4.2.21"  # CVE-2020-9404
]
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]  # Critical: Add src to Python path
