[project]
name = "pytest-demo"
version = "0.1.0"
dependencies = [
    "urllib3>=2.0.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "Django==4.2.21"  # CVE-2020-9404
]
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]  # Critical: Add src to Python path
